--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -10,7 +10,7 @@ script:
 deploy:
   provider: surge
   skip_cleanup: true
-  domain: right-band.surge.sh
+  domain: many-mint.surge.sh
   project: ./build/
 on:
   branch: master
