--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -5,8 +5,8 @@ cache:
   directories:
     - node_modules
 script:
-  # - npm test
-  - yarn build
+  - npm test
+  - npm run build
 deploy:
   provider: surge
   skip_cleanup: true
